Only open KCM in systemsettings if it can be displayed

We have to check for the presence of a X-KDE-System-Settings-Parent-Category entry when opening a KCM in systemsettings.
BUG: 423612


(cherry picked from commit 2ebf8ab391466146a7a6ae3d4dad3e0ff0c7276d)